# APIprox

./: .gitignore  .gitmodules  PKGBUILD  README.md  manual.md  package.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
docs/: sampleReq.xml  sampleRes.xml
scripts/: clean.js  prepare-sidecar-binary.cjs  version.js
shared/: package.json
shared/src/: messages.ts  models.js  models.ts
sidecar/: bundle-sidecar.js  bundle.js  generate-icons.js  package.json  tsconfig.json
sidecar/src/: index.ts
sidecar/src/interfaces/: IClipboardService.ts  IConfigService.ts  index.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/breakpoint/: service.rs
src-tauri/src/certificates/: manager.rs  mod.rs  sni_resolver.rs
src-tauri/src/commands/: apinox_bridge.rs  breakpoint.rs  certificates.rs  filewatcher.rs  mock.rs  mod.rs  proxy.rs  replacer.rs  sniffer.rs
src-tauri/src/filewatcher/: mod.rs  pairing_engine.rs  service.rs  xml_parser.rs
src-tauri/src/mock/: mod.rs  server.rs  state.rs
src-tauri/src/proxy/: server.rs  state.rs
src-tauri/src/replacer/: service.rs
src-tauri/src/storage/: rules.rs
src-tauri/webview/: index.html  package.json  vite.config.ts
src-tauri/webview/public/: README.md  manual.md
src-tauri/webview/src/: App.tsx  main.tsx
src-tauri/webview/src/components/: BreakpointsPage.tsx  CertificateManager.tsx  ConditionPickerModel.tsx  FileWatcherPage.tsx  HelpPage.tsx  MockRulesPage.tsx  ProxySetupGuide.tsx  RulesPage.tsx  ServerControl.tsx  SettingsPage.tsx  SnifferPage.tsx  SystemProxyPanel.tsx  TitleBar.tsx  TrafficDetails.tsx  TrafficViewer.tsx
src-tauri/webview/src/styles/: global.css  tokens.ts
src-tauri/webview/src/types/: index.ts
src-tauri/webview/src/utils/: bridge.ts  useIgnoreList.ts
(+6 files in other folders)
