[package]
name = "apiprox"
version = "0.1.0"
description = "APIprox - HTTP/HTTPS Proxy and Mock Server"
authors = ["Dev1"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apiprox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
raw-window-handle = "0.6"

# HTTP client and async runtime
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# HTTP proxy/mock server
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# TLS for HTTPS proxy/mock
rcgen = { version = "0.13", features = ["pem"] }
rustls = "0.23"
tokio-rustls = "0.26"
sha2 = "0.10"
time = "0.3"

# XML parsing and XPath (for mock matching and replace rules)
sxd-document = "0.3"
sxd-xpath = "0.4"

# Regular expressions
regex = "1"

# File watching
notify = "6"

# Utilities
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }




[dev-dependencies]
tempfile = "3"
rustls-pemfile = "2"
